--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,19 @@ project (dietsort)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# set(SOURCE_CODE)
-add_executable(dietsort main.cpp)
+
+set(SOURCE
+main.hpp
+# date_processing.cpp
+)
+
+add_executable(dietsort main.cpp ${SOURCE})
+
+# find_package(Boost REQUIRED)
+
+set(LIBS
+# ${Boost_LIBRARIES}
+)
+
+target_link_libraries (dietsort ${LIBS})
+
