--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project (dietsort)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
+set(CMAKE_CXX_FLAGS "-pthread") #for boost
 set(SOURCE
 main.hpp
 # date_processing.cpp
@@ -12,10 +12,10 @@ main.hpp
 
 add_executable(dietsort main.cpp ${SOURCE})
 
-# find_package(Boost REQUIRED)
+find_package(Boost 1.69.0 COMPONENTS system REQUIRED)
 
 set(LIBS
-# ${Boost_LIBRARIES}
+${Boost_LIBRARIES}
 )
 
 target_link_libraries (dietsort ${LIBS})
