--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project (dietsort)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_CXX_FLAGS "-pthread") #for boost
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread") #for boost
 
 set(SOURCE
-main.hpp
+data_structs.hpp
 parse_settings.hpp
 include/json.hpp
 )
